<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_led_controller</name>
    <version>0.0.0</version>
    <description>ROS2 package for controlling leds connected to rpi that indicate the state of ros2.</description>
    <maintainer email="jet22854111@gmail.com">docker</maintainer>
    <license>TODO</license>

    <!-- general dependencies-->
    <depend>can_msgs</depend>
    <depend>rcl_interfaces</depend>
    <depend>rclcpp</depend>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
